# DNDGame-Retro

./: .coverage  .dockerignore  .env.example  .gitignore  DOCKER_TEST_RESULTS.md  Dockerfile  LICENSE  README.md  dndgame.db  docker-compose.yml  main.py  pyproject.toml
data/: README.md
docs/: DEPLOYMENT.md  DM_GUIDE.md  DOCKER.md  PHASE1_COMPLETE.md  PHASE1_SUMMARY.md  PHASE1_TEST_RESULTS.md  PHASE2_COMPLETE.md  PHASE2_SUMMARY.md  PHASE2_TEST_RESULTS.md  PHASE3_COMPLETE.md  PHASE3_SUMMARY.md  PHASE3_TEST_RESULTS.md  PHASE4_COMPLETE.md  PHASE4_SUMMARY.md  PHASE4_TEST_RESULTS.md  PHASE5_COMPLETE.md  PHASE5_SUMMARY.md  PHASE6_COMPLETE.md  PHASE6_REFERENCE.md  PHASE6_SUMMARY.md  PHASE6_TEST_RESULTS.md  PHASE7_COMPLETE.md  PHASE7_SUMMARY.md  PHASE7_TEST_RESULTS.md  PHASE8_COMPLETE.md  PHASE8_TESTING_COMPLETE.md  PLAYER_GUIDE.md  ROADMAP.md
scripts/docker/: backup.sh  logs.sh  restore.sh  shell.sh  start-dev.sh  start-prod.sh
src/llm_dungeon_master/: __init__.py  character_builder.py  cli.py  config.py  dm_service.py  llm_provider.py  logging_config.py  models.py  presence_manager.py  prompts.py  reconnection_manager.py  security.py  server.py  sync_manager.py  turn_manager.py
test/: README.md  conftest.py  test_api.py  test_character_api.py  test_character_builder.py  test_character_templates.py  test_cli_ui.py  test_combat.py  test_conditions.py  test_config.py  test_content.py  test_dice.py  test_dm_service.py  test_health_endpoints.py  test_llm_provider.py  test_logging_config.py  test_models.py  test_multiplayer.py  test_prompts.py  test_qol.py  test_security.py
(+29 files in other folders)
